added github link

--- a/listings/index.html
+++ b/listings/index.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://virtworld.github.io/">Virtual World</a>
+            <a class="navbar-brand" href="http://jiaqili.me/">Virtual World</a>
         </div><!-- /.navbar-header -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
@@ -39,6 +39,7 @@
                 </li><li><a href="../archive.html">归档</a>
                 </li><li><a href="../categories/index.html">标签</a>
                 </li><li><a href="../rss.xml">RSS</a>
+                </li><li><a href="https://github.com/virtworld">Github</a>
 
             </li></ul>
 
