--- a/archive.html
+++ b/archive.html
@@ -9,7 +9,7 @@
     <title>文章存档 | Virtual World</title>
     
             <link href="assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
-      <link rel="canonical" href="http://virtworld.github.io/archive.html">
+      <link rel="canonical" href="http://jiaqili.me/archive.html">
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://virtworld.github.io/">Virtual World</a>
+            <a class="navbar-brand" href="http://jiaqili.me/">Virtual World</a>
         </div><!-- /.navbar-header -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
@@ -41,6 +41,7 @@
                 </li><li class="active"><a href="#">归档</a>
                 </li><li><a href="categories/index.html">标签</a>
                 </li><li><a href="rss.xml">RSS</a>
+                </li><li><a href="https://github.com/virtworld">Github</a>
 
             </li></ul>
 
