--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>李嘉奇 Jiaqi Li | Virtual World</title>
     
             <link href="assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
-      <link rel="canonical" href="http://virtworld.github.io/index.html">
+      <link rel="canonical" href="http://jiaqili.me/index.html">
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
     <![endif]-->
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://virtworld.github.io/">Virtual World</a>
+            <a class="navbar-brand" href="http://jiaqili.me/">Virtual World</a>
         </div><!-- /.navbar-header -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
@@ -43,6 +43,7 @@
                 </li><li><a href="archive.html">归档</a>
                 </li><li><a href="categories/index.html">标签</a>
                 </li><li><a href="rss.xml">RSS</a>
+                </li><li><a href="https://github.com/virtworld">Github</a>
 
             </li></ul>
 
