--- a/en/stories/about.html
+++ b/en/stories/about.html
@@ -70,7 +70,7 @@
         <div class="row">
             
     <h1>About</h1>
-    <p>Last updated: 01 June 2014 | <a href="#" title="./about.html">中文</a>阅读</p>
+    <p>Last updated: 01 June 2014 | <a href="#" title="http://www.jiaqili.me/stories/about.html">中文版</a></p>
 
         </div>
         <!--End of body content-->
