--- a/stories/about.html
+++ b/stories/about.html
@@ -70,7 +70,7 @@
         <div class="row">
             
     <h1>关于</h1>
-    <p>最后更新: 2014年6月1日 | Read in <a href="#" title="http://www.jiaqili.me/stories/en/about.html">English</a></p>
+    <p>最后更新: 2014年6月1日 | Read in <a href="#" title="http://www.jiaqili.me/en/stories/about.html">English</a></p>
 
         </div>
         <!--End of body content-->
