--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </small></h1>
         <hr>
         <div class="e-content">
-        <div><p><em>内容基于 G53COM 1314 年度的课件，讲师为 <a href="posts/g53com-computability-1314-revision-notes.html" title="http://www.cs.nott.ac.uk/~ajp/">Dr Andrew Parkes</a></em><br>
+        <div><p><em>内容基于 G53COM 1314 年度的课件，讲师为 <a href="http://www.cs.nott.ac.uk/~ajp/">Dr Andrew Parkes</a></em><br>
 <em>这篇文章<strong>并非</strong>标准答案. 任何定义，解释和示例可能是不准确的或者错误的。请参考您自己的笔记和课件。</em><br>
 <em>因为原始的笔记是用英语写的，有些术语也不清楚中文叫什么，就不翻译了。</em></p>
 <h2>1. 定义</h2>
