--- a/en/index.html
+++ b/en/index.html
@@ -70,7 +70,7 @@
         </small></h1>
         <hr>
         <div class="e-content">
-        <div><p><em>Contents based on G53COM lecture slides 1314 by <a href="posts/g53com-computability-1314-revision-notes.html" title="http://www.cs.nott.ac.uk/~ajp/">Dr Andrew Parkes</a></em><br>
+        <div><p><em>Contents based on G53COM lecture slides 1314 by <a href="http://www.cs.nott.ac.uk/~ajp/">Dr Andrew Parkes</a></em><br>
 <em>These are <strong>NOT</strong> sample answers. Any definition, explanation or example listed below could be imprecise or incorrect. Please refer to your own notes and lecture slides.</em></p>
 <h2>1. Definitions</h2>
 <h3>Problem Classes</h3>
