Added GitHub link

--- a/en/stories/about.html
+++ b/en/stories/about.html
@@ -43,6 +43,7 @@
                 </li><li><a href="../../categories/index.html">Tags</a>
                 </li><li><a href="../../rss.xml">RSS</a>
                 </li><li class="active"><a href="#">About</a>
+                </li><li><a href="http://github.com/virtworld">GitHub</a>
 
             </li></ul>
 
