--- a/stories/about.html
+++ b/stories/about.html
@@ -43,6 +43,7 @@
                 </li><li><a href="../categories/index.html">标签</a>
                 </li><li><a href="../rss.xml">RSS</a>
                 </li><li class="active"><a href="#">关于</a>
+                </li><li><a href="http://github.com/virtworld">GitHub</a>
 
             </li></ul>
 
