--- a/listings/index.html
+++ b/listings/index.html
@@ -39,6 +39,7 @@
                 </li><li><a href="../categories/index.html">标签</a>
                 </li><li><a href="../rss.xml">RSS</a>
                 </li><li><a href="../stories/about.html">关于</a>
+                </li><li><a href="http://github.com/virtworld">GitHub</a>
 
             </li></ul>
 
