--- a/galleries/index.html
+++ b/galleries/index.html
@@ -56,7 +56,7 @@
 <a href="https://github.com/virtworld">GitHub</a>
                 </li>
 <li>
-<a href="../stories/about-virtual-world/">关于</a>
+<a href="../stories/about/">关于</a>
 
                 
             </li>
