--- a/en/archive.html
+++ b/en/archive.html
@@ -49,7 +49,7 @@
 <a href="https://github.com/virtworld">GitHub</a>
                 </li>
 <li>
-<a href="../stories/about-virtual-world/">About</a>
+<a href="../stories/about/">About</a>
 
                 
             </li>
